# bench

./: CMakeLists.txt  Doxyfile  README.md
.github/workflows/: doxygen-pages.yml
api/: annotated.html  annotated_dup.js  application_8hpp_source.html  arena_8hpp_source.html  arraylist_8hpp_source.html  asset_8hpp_source.html  classbench_1_1ArrayList-members.html  classbench_1_1ArrayList.html  classbench_1_1ArrayList.js  classbench_1_1File-members.html  classbench_1_1File.html  classbench_1_1File.js  classbench_1_1HeapString-members.html  classbench_1_1HeapString.html  classbench_1_1HeapString.js  classbench_1_1IniFile-members.html  classbench_1_1IniFile.html  classbench_1_1IniFile.js  classbench_1_1ScratchArenaView-members.html  classbench_1_1ScratchArenaView.html  classbench_1_1ScratchArenaView.js  classes.html  common_8hpp_source.html  coroutine_8hpp_source.html  dir_3fd100b543530b7ea3b567cbcb2e79a0.html  dir_3fd100b543530b7ea3b567cbcb2e79a0.js  dir_7769b5914aa7b81ccb95f801dde7f7d9.html  dir_a36c4719283424f51e58ca3678e5dea3.html  dir_a36c4719283424f51e58ca3678e5dea3.js  dir_a571ca66d914189cbccb27b81fa62ec9.html  dir_a571ca66d914189cbccb27b81fa62ec9.js  dir_bac5aa69239d34ac960582aca466258e.html  dir_bac5aa69239d34ac960582aca466258e.js  dir_c5da75fdc1d6c57999112ed830c87a3c.html  dir_c5da75fdc1d6c57999112ed830c87a3c.js  editor__window_8hpp_source.html  enum__flags_8hpp_source.html  file_8hpp_source.html  files.html  files_dup.js  (+47 more)
api/search/: all_0.js  all_1.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  (+29 more)
bench/: application.cpp  application.hpp  arena.cpp  arena.hpp  arraylist.hpp  asset.cpp  asset.hpp  bench.cpp  bench.hpp  bench.natvis  bench_win32.cpp  common.hpp  coroutine.cpp  coroutine.hpp  coroutine_win32_x86.asm  defer.hpp  file.cpp  file.hpp  format.cpp  format.hpp  gamesettings.hpp  ini.cpp  ini.hpp  project.cpp  project.hpp  refhandle.hpp  renderer.cpp  renderer.hpp  string.cpp  string.hpp  sys.hpp  sys_win32.cpp  time.cpp  time.hpp  win32.cpp  window.hpp  windows.h  writer.cpp  writer.hpp
editor/: RCa09292  RCb09292  bench_editor.exe.manifest  bench_editor.rc  editor_window.cpp  editor_window.hpp  gui.hpp  main.cpp  resource.h
(+30 files in other folders)
